src/test/ui/associated-types/cache/project-fn-ret-invariant.ok.stderr
error: fatal error triggered by #[dustc_error]
  --> $DIR/project-fn-ret-invariant.rs:60:1
   |
LL | fn main() {}
   | ^^^^^^^^^

error: aborting due to previous error

